--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -22,8 +22,8 @@
 <link rel="stylesheet" type="text/css" media="all" href="{{ CSS_URL }}" />
 <link rel="stylesheet" type="text/css" media="all" href="{{ FOOTER }}" />
 <!--<![endif]-->
-<link rel="SHORTCUT ICON" href="//{{CDN_URL}}/images/favicon.ico" />
-<link rel="icon" href="//{{CDN_URL}}/images/favicon.ico" type="image/x-icon" />
+<link rel="SHORTCUT ICON" href="//{{CDN_HOST}}/images/favicon.ico" />
+<link rel="icon" href="//{{CDN_HOST}}/images/favicon.ico" type="image/x-icon" />
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"
           integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
@@ -61,7 +61,7 @@
 {% endblock %}
 
 {% block bodyEnd %}
-  <script src="//{{CDN_URL}}/javascripts/app/piwik-enable.js"></script>
+  <script src="//{{CDN_HOST}}/javascripts/app/piwik-enable.js"></script>
   <script type="application/javascript">
     (function() {
       bindPiwikListener('bankruptcy', '{{PIWIK_URL}}', {{PIWIK_SITE_ID}});
