--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -19,8 +19,8 @@
 {% block head %}
 <meta name="format-detection" content="telephone=no">
 <!--[if !IE 8]><!-->
-<link rel="stylesheet" type="text/css" media="all" href="{{ CSS_URL }}" />
-<link rel="stylesheet" type="text/css" media="all" href="{{ FOOTER }}" />
+<link rel="stylesheet" type="text/css" media="all" href="//{{CDN_HOST}}/stylesheets/services/bankrupt-officers/app.css" />
+<link rel="stylesheet" type="text/css" media="all" href="//{{CDN_HOST}}/stylesheets/services/bankrupt-officers/footer.css" />
 <!--<![endif]-->
 <link rel="SHORTCUT ICON" href="//{{CDN_HOST}}/images/favicon.ico" />
 <link rel="icon" href="//{{CDN_HOST}}/images/favicon.ico" type="image/x-icon" />
