--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -61,6 +61,8 @@
 {% endblock %}
 
 {% block bodyEnd %}
+  <script src="//{{CDN_HOST}}/javascripts/govuk-frontend/v3.6.0/govuk-frontend-3.6.0.min.js"></script>
+  <script>window.GOVUKFrontend.initAll()</script>
   <script src="//{{CDN_HOST}}/javascripts/app/piwik-enable.js"></script>
   <script type="application/javascript">
     (function() {
