Update page title for bankrupt officer search page

--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Bankrupt Officer Search
+  Search for a bankrupt and disqualified officer
 {% endblock %}
 
 {% set mainClasses = "govuk-main-wrapper--l" %}
