Add header to layout

--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -34,6 +34,15 @@
 
 {% endblock %}
 
+{% block header %}
+  {{ govukHeader({
+    homepageUrl: "/",
+    serviceName: "Search for a bankrupt and disqualified officer",
+    serviceUrl: "/admin/officer-search/scottish-bankrupt-officer",
+    containerClasses: "govuk-width-container"
+  }) }}
+{% endblock %}
+
 {% block footer %}
     {{ chFooter({
       classes: "ch",
