Fix uppercase data, remove placeholder and add DOB to officer details

--- a/src/views/bankrupt_officer.html
+++ b/src/views/bankrupt_officer.html
@@ -48,6 +48,12 @@
       </dt>
       <dd class="govuk-summary-list__value">{{ bankruptOfficer.alias }}</dd>
     </div>
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Date of birth
+      </dt>
+      <dd class="govuk-summary-list__value">{{ bankruptOfficer.dateOfBirth }}</dd>
+    </div>
   </dl>
   <h2 class="govuk-heading-m">Address details</h2>
   <dl class="govuk-summary-list govuk-!-margin-bottom-9">
