--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -35,7 +35,7 @@
             <label class="govuk-label govuk-date-input__label" for="dob-day">
               Day
             </label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2" placeholder="DD" id="dob-dd"
+            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-dd"
               name="dob-dd" autocomplete="bday-day" type="text" pattern="[0-9]*" inputmode="numeric">
           </div>
         </div>
@@ -44,7 +44,7 @@
             <label class="govuk-label govuk-date-input__label" for="dob-mm">
               Month
             </label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2" placeholder="MM" id="dob-mm"
+            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-mm"
               name="dob-mm" autocomplete="bday-month" type="text" pattern="[0-9]*" inputmode="numeric">
           </div>
         </div>
@@ -53,7 +53,7 @@
             <label class="govuk-label govuk-date-input__label" for="dob-yyyy">
               Year
             </label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-4" placeholder="YYYY" id="dob-yyyy"
+            <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-yyyy"
               name="dob-yyyy" autocomplete="bday-year" type="text" pattern="[0-9]*" inputmode="numeric">
           </div>
         </div>
