Change the error message of the 404 page

--- a/src/views/error-pages/404.html
+++ b/src/views/error-pages/404.html
@@ -10,16 +10,17 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Page not found</h1>
-        <p class="govuk-body">
-          If you typed the web address, check it is correct.
-        </p>
-        <p class="govuk-body">
-          If you pasted the web address, check you copied the entire address.
-        </p>
-        <p class="govuk-body">
-          If the web address is correct or you selected a link or button, <a href="#" class="govuk-link">contact the Tax Credits Helpline</a> if you need to speak to someone about your tax credits.
-        </p>
+        <article class="text">
+           <h1 id="page-not-found-header" class="govuk-heading-l">
+              This page cannot be found
+           </h1>
+          <p class="govuk-body">
+            Check that you have entered the correct web address or try using the search.
+          </p>
+          <p class="govuk-body">
+            If you still can't find what you're looking for email <a href="mailto:enquiries@companieshouse.gov.uk">enquiries@companieshouse.gov.uk</a>
+          </p>
+        </article>
     </div>
   </div>
 {% endblock %}
