Added logic for user sign out feature on pages

--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -45,6 +45,12 @@
   }) }}
 {% endblock %}
 
+{% block beforeContent %}
+ 
+  {% include "components/sign-out-user-banner.njk" %}
+  
+{% endblock %}
+
 {% block footer %}
     {{ chFooter({
       classes: "ch",
