--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -45,10 +45,10 @@
   }) }}
 {% endblock %}
 
-{% block beforeContent %}
+{% block signOutBanner %}
  
   {% include "components/sign-out-user-banner.njk" %}
-  
+
 {% endblock %}
 
 {% block footer %}
