--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -79,6 +79,14 @@
     Showing {{ itemsPerPage + startIndex }} of {{ totalResults }} results
   </span>
   <div class="govuk-grid-column-full-width">
+  <div class="govuk-form-group">
+    <h1 class="govuk-label-wrapper">
+      <label class="govuk-label govuk-label--s" for="filter-bankrupt-officers">
+        Filter
+      </label>
+    </h1>
+    <input class="govuk-input" id="filter-bankrupt-officers" name="filter-bankrupt-officers" type="text">
+  </div>
     <table class="govuk-table">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
