--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -79,14 +79,28 @@
   <script src="//{{CDN_HOST}}/javascripts/govuk-frontend/v3.6.0/govuk-frontend-3.6.0.min.js"></script>
   <script>window.GOVUKFrontend.initAll()</script>
   <script src="//{{CDN_HOST}}/javascripts/app/piwik-enable.js"></script>
+
+  <script>
+    $(document).ready(function(){
+      $("#filter-bankrupt-officers").on("keyup", function() {
+        var value = $(this).val().toLowerCase();
+        $(".govuk-table__body tr").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+  </script>
+
   <script type="application/javascript">
     (function() {
       bindPiwikListener('bankruptcy', '{{PIWIK_URL}}', {{PIWIK_SITE_ID}});
     }());
   </script>
+
   <noscript>
     <p>
       <img src="{{PIWIK_URL}}/piwik.php?idsite={{PIWIK_SITE_ID}}" style="border:0;" alt="" />
     </p>
   </noscript>
+
 {% endblock %}
