--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -22,6 +22,10 @@
     <input class="govuk-input govuk-!-width-one-half" id="surname" type="text" name="surname" aria-describedby="surname-hint">
   </div>
   <div class="govuk-form-group">
+    <label class="govuk-label" for="alias">Alias</label>
+    <input class="govuk-input govuk-!-width-one-half" id="alias" type="text" name="alias" aria-describedby="surname-hint">
+  </div>
+  <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
       <legend class="govuk-fieldset__legend">
         Date of birth
