minor change to html

--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -23,7 +23,7 @@
   </div>
   <div class="govuk-form-group">
     <label class="govuk-label" for="alias">Alias</label>
-    <input class="govuk-input govuk-!-width-one-half" id="alias" type="text" name="alias" aria-describedby="surname-hint">
+    <input class="govuk-input govuk-!-width-one-half" id="alias" type="text" name="alias" aria-describedby="alias-hint">
   </div>
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
