add back in title for discharge date sections and fix styling for bankrupt results table

--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -84,7 +84,7 @@
           <th scope="col" class="govuk-table__header">First name</th>
           <th scope="col" class="govuk-table__header">Last name</th>
           <th scope="col" class="govuk-table__header">Date of birth</th>
-          <th scope="col" class="govuk-table__header govuk--width-one-quarter">Postcode</th>
+          <th scope="col" class="govuk-table__header">Postcode</th>
           <th scope="col" class="govuk-table__header govuk--width-one-quarter">Debtor Discharge Date</th>
         </tr>
       </thead>
