--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -70,16 +70,16 @@
   <button class="govuk-button" data-module="govuk-button">
     Search
   </button>
-
 </form>
 
 {% if searched %}
   <h2 class="govuk-heading-l">Search results</h2>
   <span id="results-hint" class="govuk-hint">
-    Showing {{ itemsPerPage + startIndex }} of {{ totalResults }} results
+    <!--Showing {{ itemsPerPage + startIndex }} of {{ totalResults }} results-->
+    Showing {{ itemsPerPage }} of {{ totalResults }} results
   </span>
   <div class="govuk-grid-column-full-width">
-    <table class="govuk-table">
+    <table id="results-table" class="govuk-table">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header">First name</th>
@@ -102,7 +102,10 @@
     {% if not items or not items|length %}
       <h2 class="govuk-heading-s">No results found matching your search criteria.</h2>
     {% endif %}
-  </div>
+    {% if pagination %}
+      {{ govukPagination(pagination) }}
+    {% endif %}
+  </div>   
 {% endif %}
 
 {% endblock %}
