add tests, comments and cleanup

--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -75,7 +75,6 @@
 {% if searched %}
   <h2 class="govuk-heading-l">Search results</h2>
   <span id="results-hint" class="govuk-hint">
-    <!--Showing {{ itemsPerPage + startIndex }} of {{ totalResults }} results-->
     Showing {{ itemsPerPage }} of {{ totalResults }} results
   </span>
   <div class="govuk-grid-column-full-width">
@@ -103,7 +102,9 @@
       <h2 class="govuk-heading-s">No results found matching your search criteria.</h2>
     {% endif %}
     {% if pagination %}
+    <div id="pagination-container">
       {{ govukPagination(pagination) }}
+    </div>
     {% endif %}
   </div>   
 {% endif %}
