amend html id tags to match to the correct search filter. Amend test to include new filters

--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -29,13 +29,13 @@
       <div id="dob-hint" class="govuk-hint">
         For example, 31 03 1980
       </div>
-      <div class="govuk-date-input" id="dob">
+      <div class="govuk-date-input" id="from-dob">
         <div class="govuk-date-input__item">
           <div class="govuk-form-group">
             <label class="govuk-label govuk-date-input__label" for="from-dob-day">
               Day
             </label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-dd"
+            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="from-dob-dd"
               name="from-dob-dd" autocomplete="bday-day" type="text" pattern="[0-9]*" inputmode="numeric">
           </div>
         </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="to-dobmm">
+                <label class="govuk-label govuk-date-input__label" for="to-dob-mm">
                   Month
                 </label>
                 <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="to-dob-mm"
