amend title of hint id to match respective dob search sections, amend tests for dob search range

--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -22,7 +22,7 @@
     <input class="govuk-input govuk-!-width-one-half" id="surname" type="text" name="surname" aria-describedby="surname-hint">
   </div>
   <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
+    <fieldset class="govuk-fieldset" role="group" aria-describedby="from-dob-hint">
       <legend class="govuk-fieldset__legend">
         From Date of Birth
       </legend>
@@ -60,7 +60,7 @@
         </div>
   </fieldset>
       </div><div class="govuk-form-group">
-        <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
+        <fieldset class="govuk-fieldset" role="group" aria-describedby="to-dob-hint">
           <legend class="govuk-fieldset__legend">
            To Date of Birth:
           </legend>
