--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% from 'govuk/components/error-summary/macro.njk' import govukErrorSummary %}
+
 {% block pageTitle %}
   Search for a bankrupt and disqualified officer
 {% endblock %}
@@ -13,6 +15,13 @@
 </h1>
 
 <form method="post">
+{{
+    govukErrorSummary ({
+      titleText: 'There is a problem',
+      errorList: validationResult.errors
+    }) if validationResult and validationResult.errors.length > 0
+}}
+
   <div class="govuk-form-group">
     <label class="govuk-label" for="forename1">First name</label>
     <input class="govuk-input govuk-!-width-one-half" id="forename1" type="text" name="forename1" aria-describedby="forename1-hint">
@@ -25,7 +34,7 @@
     <label class="govuk-label" for="alias">Alias</label>
     <input class="govuk-input govuk-!-width-one-half" id="alias" type="text" name="alias" aria-describedby="alias-hint">
   </div>
-  <div class="govuk-form-group">
+  <div class="govuk-form-group  {% if whereTo === 'noDob' %} govuk-form-group--error     {% endif %}">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="from-dob-hint">
       <legend class="govuk-fieldset__legend">
         From Date of Birth
@@ -34,6 +43,11 @@
         For example, 31 03 1980
       </div>
       <div class="govuk-date-input" id="from-dob">
+        {% if whereTo === 'noDob' %}
+          <label class="govuk-error-message">
+              Enter a Date of Birth
+          </label>>
+        {% endif %}
         <div class="govuk-date-input__item">
           <div class="govuk-form-group">
             <label class="govuk-label govuk-date-input__label" for="from-dob-day">
@@ -71,6 +85,11 @@
           <div id="dob-hint" class="govuk-hint">
             For example, 31 03 1985
           </div>
+           {% if whereTo === 'noDob' %}
+            <label class="govuk-error-message">
+              Enter a Date of Birth
+           </label>
+           {% endif %}
           <div class="govuk-date-input" id="to-dob">
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
