--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -12,7 +12,7 @@
   Search for a bankrupt and disqualified officer
 </h1>
 
-<form method="post">
+<form method="post" action="/admin/officer-search/scottish-bankrupt-officer">
   <div class="govuk-form-group">
     <label class="govuk-label" for="forename1">First name</label>
     <input class="govuk-input govuk-!-width-one-half" id="forename1" type="text" name="forename1" aria-describedby="forename1-hint">
