--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -26,7 +26,12 @@
     <label class="govuk-label" for="forename1">First name</label>
     <input class="govuk-input govuk-!-width-one-half" id="forename1" type="text" name="forename1" aria-describedby="forename1-hint">
   </div>
-  <div class="govuk-form-group">
+  <div class="govuk-form-group {% if whereTo === 'noInfo' %} govuk-form-group--error     {% endif %}">
+    {% if whereTo === 'noInfo' %}
+    <label class="govuk-error-message">
+      Enter a Date of Birth or a Last Name
+    </label>
+  {% endif %}
     <label class="govuk-label" for="surname">Last name</label>
     <input class="govuk-input govuk-!-width-one-half" id="surname" type="text" name="surname" aria-describedby="surname-hint">
   </div>
@@ -34,7 +39,7 @@
     <label class="govuk-label" for="alias">Alias</label>
     <input class="govuk-input govuk-!-width-one-half" id="alias" type="text" name="alias" aria-describedby="alias-hint">
   </div>
-  <div class="govuk-form-group  {% if whereTo === 'noDob' %} govuk-form-group--error     {% endif %}">
+  <div class="govuk-form-group  {% if whereTo === 'noInfo' %} govuk-form-group--error     {% endif %}">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="from-dob-hint">
       <legend class="govuk-fieldset__legend">
         From Date of Birth
@@ -43,9 +48,9 @@
         For example, 31 03 1980
       </div>
       <div class="govuk-date-input" id="from-dob">
-        {% if whereTo === 'noDob' %}
+        {% if whereTo === 'noInfo' %}
           <label class="govuk-error-message">
-              Enter a Date of Birth
+            Enter a Date of Birth or a Last Name
           </label>>
         {% endif %}
         <div class="govuk-date-input__item">
@@ -77,7 +82,7 @@
           </div>
         </div>
   </fieldset>
-      </div><div class="govuk-form-group">
+      </div><div class="govuk-form-group {% if whereTo === 'noInfo' %} govuk-form-group--error     {% endif %}">
         <fieldset class="govuk-fieldset" role="group" aria-describedby="to-dob-hint">
           <legend class="govuk-fieldset__legend">
            To Date of Birth:
@@ -85,9 +90,9 @@
           <div id="dob-hint" class="govuk-hint">
             For example, 31 03 1985
           </div>
-           {% if whereTo === 'noDob' %}
+           {% if whereTo === 'noInfo' %}
             <label class="govuk-error-message">
-              Enter a Date of Birth
+              Enter a Date of Birth or a Last Name
            </label>
            {% endif %}
           <div class="govuk-date-input" id="to-dob">
