--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% from 'govuk/components/error-summary/macro.njk' import govukErrorSummary %}
+
 {% block pageTitle %}
   Search for a bankrupt and disqualified officer
 {% endblock %}
@@ -12,7 +14,15 @@
   Search for a bankrupt and disqualified officer
 </h1>
 
+
 <form method="post" action="/admin/officer-search/scottish-bankrupt-officer">
+{{
+    govukErrorSummary ({
+      titleText: 'There is a problem',
+      errorList: validationResult.errors
+    }) if validationResult and validationResult.errors.length > 0
+}}
+
   <div class="govuk-form-group">
     <label class="govuk-label" for="forename1">First name</label>
     <input class="govuk-input govuk-!-width-one-half" id="forename1" type="text" name="forename1" aria-describedby="forename1-hint">
@@ -25,7 +35,7 @@
     <label class="govuk-label" for="alias">Alias</label>
     <input class="govuk-input govuk-!-width-one-half" id="alias" type="text" name="alias" aria-describedby="alias-hint">
   </div>
-  <div class="govuk-form-group">
+  <div class="govuk-form-group  {% if whereTo === 'invalidFromDob' %} govuk-form-group--error     {% endif %}">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="from-dob-hint">
       <legend class="govuk-fieldset__legend">
         From Date of Birth
@@ -34,13 +44,18 @@
         For example, 31 03 1980
       </div>
       <div class="govuk-date-input" id="from-dob">
+          {% if whereTo === 'invalidFromDob' %}
+          <label class="govuk-error-message">
+            Enter a valid date
+          </label>
+        {% endif %}
         <div class="govuk-date-input__item">
           <div class="govuk-form-group">
             <label class="govuk-label govuk-date-input__label" for="from-dob-day">
               Day
             </label>
             <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="from-dob-dd"
-              name="from-dob-dd" autocomplete="bday-day" type="text" pattern="[0-9]*" inputmode="numeric">
+              name="from-dob-dd" autocomplete="bday-day" type="text"  inputmode="numeric">
           </div>
         </div>
         <div class="govuk-date-input__item">
@@ -49,7 +64,7 @@
               Month
             </label>
             <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="from-dob-mm"
-              name="from-dob-mm" autocomplete="bday-month" type="text" pattern="[0-9]*" inputmode="numeric">
+              name="from-dob-mm" autocomplete="bday-month" type="text"  inputmode="numeric">
           </div>
         </div>
         <div class="govuk-date-input__item">
@@ -58,12 +73,12 @@
               Year
             </label>
             <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="from-dob-yyyy"
-              name="from-dob-yyyy" autocomplete="bday-year" type="text" pattern="[0-9]*" inputmode="numeric">
+              name="from-dob-yyyy" autocomplete="bday-year" type="text"  inputmode="numeric">
             </div>
           </div>
         </div>
   </fieldset>
-      </div><div class="govuk-form-group">
+      </div><div class="govuk-form-group {% if dobError === 'invalidToDob'  %} govuk-form-group--error     {% endif %}">
         <fieldset class="govuk-fieldset" role="group" aria-describedby="to-dob-hint">
           <legend class="govuk-fieldset__legend">
            To Date of Birth:
@@ -71,6 +86,11 @@
           <div id="dob-hint" class="govuk-hint">
             For example, 31 03 1985
           </div>
+           {% if dobError === 'invalidToDob' %}
+           <label class="govuk-error-message">
+            Enter a valid date
+          </label>
+           {% endif %}
           <div class="govuk-date-input" id="to-dob">
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
@@ -78,7 +98,7 @@
                   Day
                 </label>
                 <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="to-dob-dd"
-                  name="to-dob-dd" autocomplete="bday-day" type="text" pattern="[0-9]*" inputmode="numeric">
+                  name="to-dob-dd" autocomplete="bday-day" type="text" inputmode="numeric">
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -87,7 +107,7 @@
                   Month
                 </label>
                 <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="to-dob-mm"
-                  name="to-dob-mm" autocomplete="bday-month" type="text" pattern="[0-9]*" inputmode="numeric">
+                  name="to-dob-mm" autocomplete="bday-month" type="text"  inputmode="numeric">
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -96,7 +116,7 @@
                   Year
                 </label>
                 <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="to-dob-yyyy"
-                  name="to-dob-yyyy" autocomplete="bday-year" type="text" pattern="[0-9]*" inputmode="numeric">
+                  name="to-dob-yyyy" autocomplete="bday-year" type="text"  inputmode="numeric">
               </div>
             </div>
           </div>
