--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -27,9 +27,9 @@
     <label class="govuk-label" for="forename1">First name</label>
     <input class="govuk-input govuk-!-width-one-half" id="forename1" type="text" name="forename1" aria-describedby="forename1-hint">
   </div>
-  <div class="govuk-form-group {% if whereTo === 'noInfo' %} govuk-form-group--error     {% endif %}">
+  <div class="govuk-form-group {% if whereTo === 'noInfo' %} govuk-form-group--error {% endif %}" >
     {% if whereTo === 'noInfo' %}
-    <label class="govuk-error-message">
+    <label class="govuk-error-message" id=no-info-error >
       Enter a Date of Birth or a Last Name
     </label>
   {% endif %}
