--- a/src/views/bankrupt.html
+++ b/src/views/bankrupt.html
@@ -69,7 +69,7 @@
             Enter a Date of Birth or a Last Name
           </label>>
           {% elif whereTo === 'invalidFromDob' %}
-          <label class="govuk-error-message">
+          <label class="govuk-error-message" id="invalid-from-dob-error">
             Enter a valid date
           </label>
         {% endif %}
@@ -116,7 +116,7 @@
               Enter a Date of Birth or a Last Name
             </label>>
            {% elif toDobError === 'invalidToDob' %}
-           <label class="govuk-error-message">
+           <label class="govuk-error-message" id="invalid-to-dob-error">
             Enter a valid date
           </label>
            {% endif %}
